infrastructure/kubernetes/apps/payment-app/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
  labels:
    app.kubernetes.io/part-of: fivepercent-observability-lab
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-config
    namespace: envoy-gateway-system
